# rust_hooking_utils

./: Cargo.toml
src/: console.rs  injecting.rs  launching.rs  lib.rs  pausing.rs  pointer.rs
src/dinput8/: hooking.rs  mod.rs  proxy.rs
src/launching/: injecting.rs  mod.rs
src/patching/: mod.rs  process.rs
src/proxy/: dinput8.rs  mod.rs
src/proxying/: mod.rs
src/proxying/dinput8/: hooking.rs  proxy.rs
src/raw_input/: hooking.rs  key_manager.rs  mod.rs  virtual_keys.rs
