[package]
name = "rust_hooking_utils"
version = "0.1.0"
edition = "2024"
resolver = "2"

[features]
default = ["launching", "patching"]
launching = ["dll-syringe"]
patching = ["windows/Win32_System_LibraryLoader", "windows/Win32_UI_WindowsAndMessaging"]
dinput8 = ["proxy-dinput8", "hooking-dinput8"]
hooking-dinput8 = ["windows/Win32_Devices_HumanInterfaceDevice", "windows/Win32_System_LibraryLoader"]
proxy-dinput8 = ["libloading"]
hooking-rawinput = []

[dependencies]
eyre = "0.6"
log = "0.4"
thiserror = "2"
once_cell = "1"
retour = { version = "0.4.0-alpha.3", features = ["static-detour"] }
patternscan = "1.2"
dll-syringe = { version = "0.17.1", optional = true }
libloading = { version = "0.9", optional = true }
serde = { version = "1", features = ["derive"] }

[dependencies.windows]
version = "0.62"
features = ["Win32_Foundation", "Win32_Security", "Win32_System_Threading", "Win32_System_SystemServices", "Win32_System_Diagnostics_Debug", "Win32_System_Diagnostics", "Win32_System_Diagnostics_ToolHelp", "Win32_System_SystemInformation", "Win32_Devices_HumanInterfaceDevice", "Win32_System_ProcessStatus", "Win32_UI_Input_KeyboardAndMouse", "Win32_System_Memory", "Win32_System_Console"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "doc_cfg"]
